--- a/src/Wilcommerce.Registries/Wilcommerce.Registries.csproj
+++ b/src/Wilcommerce.Registries/Wilcommerce.Registries.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionPrefix>1.0.1-beta1</VersionPrefix>
     <Authors>Alberto Mori</Authors>
     <AssemblyName>Wilcommerce.Registries</AssemblyName>
     <PackageId>Wilcommerce.Registries</PackageId>
@@ -14,10 +13,15 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <Version>1.0.0</Version>
+    <Version>1.0.1-beta1</Version>
     <Description>Wilcommerce Registries components</Description>
     <Title>Wilcommerce.Registries</Title>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
