--- a/src/Wilcommerce.Registries/Wilcommerce.Registries.csproj
+++ b/src/Wilcommerce.Registries/Wilcommerce.Registries.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <VersionPrefix>1.0.1-beta1</VersionPrefix>
+    <VersionPrefix>1.0.1</VersionPrefix>
     <Authors>Alberto Mori</Authors>
     <AssemblyName>Wilcommerce.Registries</AssemblyName>
     <PackageId>Wilcommerce.Registries</PackageId>
@@ -13,7 +13,7 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <Version>1.0.1-beta1</Version>
+    <Version>1.0.1</Version>
     <Description>Wilcommerce Registries components</Description>
     <Title>Wilcommerce.Registries</Title>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -40,7 +40,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Wilcommerce.Core.Common" Version="1.0.0" />
+    <PackageReference Include="Wilcommerce.Core.Common" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
